updates to styling

--- a/index.html
+++ b/index.html
@@ -37,11 +37,13 @@
                 <div class="landing__valueprop">
                     <p>
                         <span class="landing__valueprop_span1">Our mission</span>
-                    <p>is to help
+                        is to help
+                    </p>
                     <p>
                         <span class="landing__valueprop_span2">kids enhance</span>
                         <br><span class="landing__valueprop_span4">cognitive functions</span>
-                    <p>using
+                        <span>using</span>
+                    <p>
                     <p>
                         <!--  <span class="landing__valueprop_span4">interconnectedness</span> -->
                         <span class="landing__valueprop_span3">Real World Networks</span>
@@ -92,9 +94,9 @@
                <h3 class="about__us subheaders">About Us</h3>
                 <div class="about__text">
                     <p class="about__text_para about__text_para1">
-                        We’re a community of passionate researchers, educators and industry mentors with a common interest to introduce networks
-                        to kids across different countries. The goal of the community is to create a thriving ecosystem who share best practices
-                        on methods and tools to help children master the art of insight generation using networks.
+                        We’re a community of passionate researchers, educators and mentors with a desire to introduce networks
+                        to children. The goal is to create a thriving ecosystem to share best practices
+                        on methods and tools to help children master the art of generating insights using networks.
                     </p>
                     <p class="about__text_para about__text_para2">
                         <span>Who can join?</span><br>
@@ -174,16 +176,12 @@
             <article class="approach__inner_desc inner">
                 <h3 class="approach__header subheaders">The Fellowship</h3>
                     <div class="approach__about">
-                        <p class="wraparound">
-                            Every year, NetworkED hosts a short term fellowship program which orients and equips children with tools to explore
-                            networks in the real world through different pathways.
+                        <p class="approach__about_para approach__about_para1">
+                            Every year, NetworkED hosts a short term fellowship program to orient and equip children to explore
+                            networks in the real world through various pathways.
                         </p>
-                        <div>
-                            <span>Read More</span>
-                            <span></span>
-                        </div>
-                        <p class="wraparound">
-                            The fellowship acts as a launchpad for children to explore real world complexity through different pathways. The
+                        <p class="approach__about_para approach__about_para2">
+                            The fellowship acts as a launchpad to explore real world complexity. The
                             fellowship is immersive and challenging, as children investigate real world biological, physical and social networks
                             through a range of digital and physical experiences.
                             The design of the fellowship is done well in advance in collaboration with domain experts, researchers and educators to
