updates to styling

--- a/index.html
+++ b/index.html
@@ -312,16 +312,19 @@
         </section>
         <section class="netscience pagebg">
             <article class="netscience__inner_disc inner">
-                <h3 class="subheaders">What is NETWORK SCIENCE?</h3>
-                <div class="netscience__text">
-                    <h4>Network Science is the study of patterns of connections in the real world</h4>
-                    <p class="wraparound">It is an emerging science which provides a
+                <div class="netscience__intro">
+                    <h3 class="netscience__header subheaders"><span>What is</span><br>network science?</h3>
+                    <h4 class="netscience__intro_header">Network Science is the study of patterns of connections in the real world</h4>
+                    <span class="netscience__intro_more">learn more</span>
+                </div>
+                <div class="netscience__details">
+                    <p class="netscience__details_para">It is an emerging science which provides a
                     wiring diagram of any complex real world system be it society, spread of diseases or even the wiring of the brain. It
                     unpacks the similarities, differences, relationships and connectivity amongst all parts within the networks revealing
                     the mechanistic nature of the world we live in.</p> 
-                    <p class="wraparound">Through networks, we understand the behaviour of real world dynamics of
+                    <p class="netscience__details_para">Through networks, we understand the behaviour of real world dynamics of
                     complex systems, enabling us to better identify, manage, predict the problems worth solving for social change.</p>
-                </div>
+                </div>  
             </article>
             
             <article class="netscience__apps inner">
