updates to styling

--- a/index.html
+++ b/index.html
@@ -221,12 +221,7 @@
                             </p>
        
                         </div>
-                        <div class="approach__cta">
-                            <svg width="45" height="45" viewBox="0 0 76 76" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <circle cx="39.5" cy="39.5" r="28" stroke="#03243C" />
-                                <path d="M65.1675 41.4218L25.1497 62.0755L27.272 17.0922L65.1675 41.4218Z" fill="#03243C" />
-                            </svg>
-                        </div>
+                        <span class="approach__season1_more">show more</span>
                     </div>
                     <div class="approach__season1cards">
                         <div class="approach__scard approach__scard1">
@@ -316,7 +311,7 @@
                 <div class="netscience__intro">
                     <h3 class="netscience__header subheaders"><span>What is</span><br>network science?</h3>
                     <h4 class="netscience__intro_header">Network Science is the study of patterns of connections in the real world</h4>
-                    <span class="netscience__intro_more">learn more</span>
+                    <span class="netscience__intro_more">show more</span>
                 </div>
                 <div class="netscience__details">
                     <p class="netscience__details_para">It is an emerging science which provides a
