--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <!-- <span class="header__home header__home_smhide">
             <i class="fas fa-home"></i>
         </span> -->
-        <div class="header__hamburger">
+        <div id="hamburger" class="header__hamburger">
             <div class="header__line1_show menu__show1"></div>
             <div class="header__line2_show menu__show2"></div>
             
@@ -400,23 +400,22 @@
             
         </footer>
     </main>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/CSSRulePlugin.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/Draggable.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/MotionPathPlugin.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/TextPlugin.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/ScrollToPlugin.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/ScrollTrigger.min.js"></script>
     <script src="core.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
-    <!-- <script src="/node_modules/animejs/lib/anime.min.js"></script> -->
-    <!-- <script>
-        anime({
-                targets: '.about__circle',
-                rotate: '1turn',
-                direction: 'alternate',
-                duration: 1200,
-                loop: true,
-                autoplay: true,
-                easing: 'linear'
-            });
-    </script> -->
     <script>
         particlesJS.load('particles-js', 'particles.json');
 
+    </script>
+    <script>
+        gsap.from(".header__hamburger", { duration: 1, scale: 1.5 });
+        gsap.to(".header__hamburger", { duration: 1, scale: 1 });
     </script>
 </body>
 </html>
